youfull/objects/Leader_Activity_Config__c.object
<CustomObject>
    <fields>
        <fullName>Current_Campaign_Fld__c</fullName>
        <label>Current Campaign Fld</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Market_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Market Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Leader Activity Configs</relationshipLabel>
        <relationshipName>Leader_Activity_Configs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Next_Campaign_Fld__c</fullName>
        <label>Next Campaign Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Leader_Fld__c</fullName>
        <label>Non Leader Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this to rename this label. Do not use with Is Market Tag.</inlineHelpText>
        <label>Override Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Fld__c</fullName>
        <label>Plan Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Campaign_Fld__c</fullName>
        <label>Prior Campaign Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reverse_Trending_Arrows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Trending Arrows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Row_Type__c</fullName>
        <label>Row Type</label>
        <picklist>
            <picklistValues>
                <fullName>Total Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Market Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Market Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Status Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Status Demotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Award Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Under Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Achieving Minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders with Multiples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Rep First Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Customers Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders on Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstatements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Earnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Tag 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAP – Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAP Award Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPPY_Campaign_Fld__c</fullName>
        <label>SPPY Campaign Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Lvl_1_Fld__c</fullName>
        <label>Title Lvl 1 Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Lvl_2_Fld__c</fullName>
        <label>Title Lvl 2 Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Lvl_3_Fld__c</fullName>
        <label>Title Lvl 3 Fld</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_Lvl_UQ_Fld__c</fullName>
        <label>Title Lvl UQ Fld</label>
        <type>TextArea</type>
    </fields>
    <label>Leader Activity Config</label>
    <nameField>
        <displayFormat>LAC-Row-{000000}</displayFormat>
        <label>Leader Activity Config Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leader Activity Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>